ensure we restore stashed documents with right encoding

BUG: 489360